--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,26 @@
-body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+body{
+    background-color:black;
+    color :white;
+    font-family: 'JetBrains Mono', monospace;
+}
+img{
+    width: 5%;
+    height: 5%;
+}
+.nav {
+    display :flex;
+    justify-content:space-between;
+}
+.nav-items {
+    list-style: none;
+    display: flex;
+}
+.nav-items > li {
+    padding: 10px;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+.main-data {
+   
+    justify-content:center;
+    align-items: center;
 }
